--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ wheel==0.26.0
 
 djangorestframework==3.6.4
 django-filter
-django-rest-swagger=2.1.2
+django-rest-swagger==2.1.2
 django-cors-headers
 
 mysqlclient==1.3.4
